--- a/РКИСЛР_5.csproj
+++ b/РКИСЛР_5.csproj
@@ -63,10 +63,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2AddData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2AddData.Designer.cs">
+      <DependentUpon>Form2AddData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2AddData.resx">
+      <DependentUpon>Form2AddData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
